improved explanation for insertion sort

--- a/src/styles/renderer.css
+++ b/src/styles/renderer.css
@@ -1,7 +1,12 @@
+.renderer-container {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+}
+
 .renderer-element {
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
 	border-radius: 0.25rem 0.25rem 0 0;
-	background: red;
 }
